[gd_scene load_steps=46 format=2]

[ext_resource path="res://Scenes/GUI/Dialogbox.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/3.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/4.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/dialog/1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/1.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/5.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/10.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/6.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/7.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/9.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/8.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/32.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/11.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/12.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/13.png" type="Texture" id=16]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/14.png" type="Texture" id=17]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/15.png" type="Texture" id=18]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/16.png" type="Texture" id=19]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/17.png" type="Texture" id=20]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/18.png" type="Texture" id=21]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/19.png" type="Texture" id=22]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/20.png" type="Texture" id=23]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/21.png" type="Texture" id=24]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/22.png" type="Texture" id=25]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/23.png" type="Texture" id=26]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/24.png" type="Texture" id=27]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/25.png" type="Texture" id=28]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/26.png" type="Texture" id=29]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/27.png" type="Texture" id=30]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/28.png" type="Texture" id=31]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/29.png" type="Texture" id=32]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/30.png" type="Texture" id=33]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/31.png" type="Texture" id=34]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/33.png" type="Texture" id=35]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/34.png" type="Texture" id=36]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/35.png" type="Texture" id=37]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/dialog/2.png" type="Texture" id=38]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/dialog/3.png" type="Texture" id=39]
[ext_resource path="res://Assets/Sprites/Other/Dialog/Adam open/dialog/4.png" type="Texture" id=40]
[ext_resource path="res://Assets/Fonts/metroid_fusion_font__inline.ttf" type="DynamicFontData" id=41]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 37 ), ExtResource( 36 ), ExtResource( 35 ), ExtResource( 13 ), ExtResource( 34 ), ExtResource( 33 ), ExtResource( 32 ), ExtResource( 31 ), ExtResource( 30 ), ExtResource( 29 ), ExtResource( 28 ), ExtResource( 27 ), ExtResource( 26 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 23 ), ExtResource( 22 ), ExtResource( 21 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": false,
"name": "end",
"speed": 60.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 13 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ) ],
"loop": false,
"name": "start",
"speed": 60.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 39 ), ExtResource( 38 ) ],
"loop": true,
"name": "dialog",
"speed": 8.0
} ]

[sub_resource type="DynamicFontData" id=2]
antialiased = false
font_path = "res://Assets/Fonts/metroid_fusion_font__outline.ttf"

[sub_resource type="DynamicFont" id=3]
font_data = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 41 )

[node name="Dialogbox" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Adam" type="AnimatedSprite" parent="CanvasLayer"]
position = Vector2( 8, 8 )
scale = Vector2( 1.26667, 1.4 )
frames = SubResource( 1 )
animation = "start"
frame = 34
playing = true
centered = false

[node name="AdamTextOutline" type="RichTextLabel" parent="CanvasLayer"]
margin_left = 22.0
margin_top = 182.0
margin_right = 300.0
margin_bottom = 214.0
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 0
meta_underlined = false
text = "Text"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AdamText" type="RichTextLabel" parent="CanvasLayer"]
margin_left = 22.0
margin_top = 183.0
margin_right = 300.0
margin_bottom = 215.0
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 0
custom_constants/line_separation = 3
bbcode_enabled = true
bbcode_text = "Samus, [color=#F7FF00]%&1Hell_[/color]%_&_
"
meta_underlined = false
text = "Samus, %&1Hell_%_&_
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextSpeed" type="Timer" parent="."]
wait_time = 0.05

[node name="TimeBetweenActions" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AutoTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="AutoTimer" to="." method="_on_AutoTimer_timeout"]
